--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,3 +1,8 @@
+* {
+    padding: 0;
+    margin: 0;
+}
+
 body {
     font-family: Arial, sans-serif;
     display: flex;
@@ -6,6 +11,9 @@ body {
 
 iframe {
     border: none;
-    width: 50%;
     height: 100vh;
+}
+
+#videos {
+    width: 100%;
 }
