--- a/frontend/src/mf_videos/styles.css
+++ b/frontend/src/mf_videos/styles.css
@@ -1,5 +1,15 @@
 .container {
-    display: flex;
+    display: grid;
+}
+
+.busca-videos {
+    margin: 0px 15px;
+    width: 75%;
+    justify-self: flex-end;
+}
+
+.busca-videos h1 {
+    color: #b11515;
 }
 
 #results {
@@ -10,16 +20,17 @@
 
 #results .elemento-video {
     width: 30%;
+    height: 500px;
     margin: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-end;
 }
 
 #results .elemento-video iframe{
     width: 100%;
     margin: 10px;
-}
-
-.busca-videos {
-    margin: 0px 15px;
 }
 
 .favorite-btn {
@@ -31,9 +42,12 @@ body {
 }
 
 .menu {
+    position: fixed;
     width: 200px;
     height: 90vh;
-    background-color: #f0f0f0;
+    background-color: #ffffff;
+    border: 2px solid #b11515;
+    border-radius: 16px;
     padding: 20px;
 }
 
@@ -46,12 +60,12 @@ body {
 }
 
 .menu a:hover, .menu a.clicked {
-    color: #007bff;
+    color: #b11515;
 }
 
 #searchQuery {
     padding: 10px;
-    border: 1px solid gray;
+    border: 1px solid #b11515;
     border-radius: 8px;
-    width: 30%;
+    width: 40%;
 }
